<resources>
    <string name="app_name">IoT</string>
    <string name="mode">Mode :</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="sample_device">Ma Lampe - Cuisine</string>
    <string name="intensity">Intensity:</string>
    <string name="sample_product_type">Mon ampoule</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occurred while loading the posts</string>
    <string name="position">Position :</string>
    <string name="temperature">Temperature :</string>
</resources>
