<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />
        <variable
                name="viewModel"
                type="fr.ap7.iot.ui.DeviceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/card_bg"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                app:mutableText="@{viewModel.getDeviceName}"
                android:text="@string/sample_device"
                android:textColor="@color/title_text_color"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deviceName"
                android:layout_alignStart="@+id/deviceName"
                android:layout_alignLeft="@id/deviceName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                app:mutableSwitch="@{viewModel.getMode}"
                app:mutableModeViewVisibility="@{viewModel.getMode}"
                android:lineSpacingExtra="8dp"
                android:switchMinWidth="56dp"
                android:text="@string/mode"
                android:textColor="@color/content_text_color"
                android:textOff="@string/off"
                android:textOn="@string/on"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mode"
                android:layout_alignStart="@+id/deviceName"
                android:layout_alignLeft="@id/deviceName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/intensity"
                app:mutableViewVisibility="@{viewModel.getIntensity}"
                android:textColor="@color/content_text_color"
                tools:ignore="RtlHardcoded" />

            <SeekBar
                android:id="@+id/seekBarIntensity"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/mode"
                android:layout_alignEnd="@+id/intensity"
                android:layout_alignRight="@+id/intensity"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="-190dp"
                android:layout_marginRight="-190dp"
                android:lineSpacingExtra="8dp"
                android:max="100"
                app:mutableViewVisibility="@{viewModel.getIntensity}"
                android:progress="@={viewModel.getIntensity}"
                android:textColor="@color/content_text_color"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_below="@id/mode"
                android:layout_alignEnd="@+id/seekBarIntensity"
                android:layout_alignRight="@+id/seekBarIntensity"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="-25dp"
                android:layout_marginRight="-25dp"
                app:mutableViewVisibility="@{viewModel.getIntensity}"
                android:text="@{String.valueOf(safeUnbox(viewModel.getIntensity))}"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intensity"
                android:layout_alignStart="@+id/deviceName"
                android:layout_alignLeft="@id/deviceName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/position"
                app:mutableViewVisibility="@{viewModel.getPosition}"
                android:textColor="@color/content_text_color" />

            <SeekBar
                android:id="@+id/seekBarPosition"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/intensity"
                android:layout_alignEnd="@+id/position"
                android:layout_alignRight="@+id/position"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="-190dp"
                android:layout_marginRight="-190dp"
                android:lineSpacingExtra="8dp"
                android:max="100"
                android:progressBackgroundTint="@color/design_default_color_secondary"
                android:progressTint="@color/black"
                android:colorControlActivated="@color/black"
                app:mutableViewVisibility="@{viewModel.getPosition}"
                android:progress="@={viewModel.getPosition}"
                android:textColor="@color/content_text_color" />

            <TextView
                android:id="@+id/textViewPosition"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_below="@id/intensity"
                android:layout_alignEnd="@+id/seekBarPosition"
                android:layout_alignRight="@+id/seekBarPosition"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="-25dp"
                android:layout_marginRight="-25dp"
                app:mutableViewVisibility="@{viewModel.getPosition}"
                android:text="@{String.valueOf(safeUnbox(viewModel.getPosition))}"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intensity"
                android:layout_alignStart="@+id/deviceName"
                android:layout_alignLeft="@id/deviceName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="50dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/temperature"
                app:mutableViewVisibility="@{viewModel.getTemperature}"
                android:textColor="@color/content_text_color" />

            <SeekBar
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/intensity"
                android:layout_alignEnd="@+id/temperature"
                android:layout_alignRight="@+id/temperature"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="-189dp"
                android:layout_marginRight="-189dp"
                android:colorControlActivated="@color/default_blue_light"
                android:lineSpacingExtra="8dp"
                android:max="28"
                android:min="7"
                android:padding="5dp"
                android:progressBackgroundTint="@color/design_default_color_primary"
                android:progressTint="@color/black"
                android:textColor="@color/content_text_color"
                android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
                android:thumb="@drawable/temperature"
                android:thumbOffset="15dp"
                app:mutableViewVisibility="@{viewModel.getTemperature}"
                app:progress="@{viewModel.getTemperature}"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/productType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:mutableText="@{viewModel.getProductType}"
                android:textColor="@color/content_text_color"
                tools:ignore="RelativeOverlap,RtlHardcoded" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/container"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>